# tempfile-cli

./: README.md  pyproject.toml
tempfile_cli/: main.py
tempfile_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tempfile_cli/commands/: clean.py  config.py  edit.py  keep.py  list.py  new.py  schedule.py
tempfile_cli/core/: utils.py
tests/: test_cli.py  test_utils.py
