[project]
name = "tempfile-cli"
version = "0.1.0"
description = "Terminal scratchpad notes with auto-expiration and tagging"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Gigi", email = "your@email.com"}]
dependencies = ["colorama"]

[project.scripts]
tempfile = "tempfile_cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
